--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,8 @@ AllCops:
 
 Layout/LineLength:
   Max: 130
+Layout/EndOfLine:
+  Enabled: false
 Metrics/MethodLength:
   Include:
     - "app/controllers/*"
